--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ beautifulsoup4==4.7.1
 certifi==2018.11.29
 chardet==3.0.4
 Django==2.1.5
+django-crispy-forms==1.7.2
 django-extensions==2.1.4
 idna==2.8
+psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
